testing: fix scrollbar overlaps coverage indicators (#236387)
Fixes #235343

--- a/src/vs/workbench/contrib/testing/browser/media/testing.css
+++ b/src/vs/workbench/contrib/testing/browser/media/testing.css
@@ -481,7 +481,7 @@
 	align-items: center;
 	gap: 4px;
 	font-size: 11px;
-	margin-right: 0.8em;
+	margin-right: 12px;
 }
 
 .test-coverage-bars .bar {
